Bug fixes to handle issues detected in real use.